# elis-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/: implementation-plan.md
src/: config.py  db.py  graph.py  main.py  parsers.py  state.py
src/nodes/: analysis.py  dashboard.py  fetch_daily.py  initialization.py  reporting.py  seed_check.py  seeding.py  storage.py
